[gd_scene load_steps=6 format=3 uid="uid://c3scxhc5q5y7b"]

[ext_resource type="Texture2D" uid="uid://bcfkk5m1uwr5j" path="res://objects/gear.png" id="1_p0bhv"]
[ext_resource type="Script" path="res://gear.gd" id="1_uf85c"]
[ext_resource type="AudioStream" uid="uid://c6o7o6w075rmh" path="res://sounds/gearchurnp1.mp3" id="3_l6pjp"]
[ext_resource type="AudioStream" uid="uid://bq5pm1ciuctug" path="res://sounds/gearchurnp2.mp3" id="4_l3fnu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g1m3n"]

[node name="Gear" type="Node2D"]
script = ExtResource("1_uf85c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 253
collision_mask = 253

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(52, 52)
shape = SubResource("CircleShape2D_g1m3n")

[node name="GearSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_p0bhv")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 253
collision_mask = 253

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PackedVector2Array(-98, -495, 98, -495, 101, -394, 175, -368, 242, -444, 394, -320, 333, -234, 370, -168, 469, -184, 510, 10, 405, 35, 393, 111, 482, 162, 382, 337, 290, 287, 232, 335, 265, 433, 73, 505, 39, 405, -39, 405, -74, 504, -266, 435, -231, 335, -291, 287, -383, 341, -482, 162, -393, 110, -406, 34, -509, 12, -472, -186, -371, -168, -331, -235, -397, -315, -246, -443, -175, -367, -101, -394)

[node name="churn1" type="AudioStreamPlayer2D" parent="."]
position = Vector2(4, -7)
stream = ExtResource("3_l6pjp")
volume_db = -10.0
pitch_scale = 0.88

[node name="churn2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-29, -16)
stream = ExtResource("4_l3fnu")
volume_db = -10.0
pitch_scale = 0.8

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="churn1" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
